# slam-vo

./: .gitignore  CMakeLists.txt  README.md
config/: kitti_config.yaml
doc/: idea.md
include/: Backend.hpp  Camera.hpp  Common.hpp  Config.hpp  Dataset.hpp  Feature.hpp  Frame.hpp  Frontend.hpp  G2OTypes.hpp  Map.hpp  MapPoint.hpp  Triangulation.hpp  View.hpp  VisualOdometry.hpp
main/: run_kitti_stereo.cpp
src/: Backend.cpp  Camera.cpp  Config.cpp  Dataset.cpp  Feature.cpp  Frame.cpp  Frontend.cpp  Map.cpp  MapPoint.cpp  Triangulation.cpp  View.cpp  VisualOdometry.cpp
test/: camera_test.cpp  config_test.cpp  dataset_test.cpp  map_point_test.cpp  view_test.cpp  vo_test.cpp
